# mates-lang

./: Makefile  README.md  bootstrap.sh  install.bat  install.sh  pyproject.toml
src/constants/: keywords.py  operators.py
src/lang/: add.py  main.py
src/mates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_main.py
