[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mates"
version = "0.1.0"
description = "Un lenguaje matemático para Python"
authors = [
  { name="Adolfo Moyano", email="admodevcodes@outlook.com" }
]
dependencies = []

[project.optional-dependencies]
dev = ["black", "mypy", "pytest"]

[project.scripts]
mates-lang = "lang.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

